# Cooking

./: README.md  docker-compose.yaml  pyproject.toml
backend/: .env.example  .gitignore  Dockerfile  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
backend/migrations/versions/: 0e2a9fa01660_.py  3642cbff8c12_.py  456b3ebd185c_.py  6fcc9059e2aa_.py  8a98b4a3864d_.py  934e69673534_.py  ae0a040ed2c3_.py  b4d75fbd96b7_.py  ba2acdf52f69_.py  c2f1943b3325_.py  ffd4fec025a1_.py
backend/src/: admin_setup.py  config.py  main.py
backend/src/handlers/: exception_handlers.py
backend/tests/adapter_tests/: recipe.py
frontend/: capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/android/app/: build.gradle
frontend/src/: index.css  main.tsx
frontend/src/components/: account_widget.tsx  basket_button.tsx  current_offers.tsx  dotted_row.tsx  footer.tsx  header.tsx  history.tsx  horizontal_scroll.tsx  increase_balance_button.tsx  large_card.tsx  pay_button.tsx  purchased_card.tsx  (+6 more)
migrations/: env.py
migrations/versions/: 1737d485f6be_.py  26d573ce709c_.py  3128a897cd5f_.py  319474854954_.py  43f53b8c1941_.py  5b4cc20a4e36_.py  63eed7966348_.py  732da55bf6bd_.py  8e166327d81a_.py  90e6ba66ca2e_.py  b38a25894946_.py  e5791584c363_.py  e830bc80d087_.py  f45ba2e9a648_fixed_uuid_foreignkey_from_id_field.py  f4f8b8ac404f_.py
src/: admin_setup.py  config.py  main.py
src/domain/: exceptions.py
src/use_cases/: crud.py  search.py
tests/adapter_tests/: recipe.py
(+50 files in other folders)
