[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastadmin[fastapi,sqlalchemy]>=0.2.22",
    "fastapi>=0.128.0",
    "fastapi-pagination>=0.15.8",
    "greenlet>=3.3.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.22",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
